crates/wac-parser/tests/resolution/fail/target-import-mismatch-resource.wac
package test:comp targets test:comp/foo;

world foo {
    import foo: interface {
        resource x {
            constructor();
        }
    };
}

import foo2 as foo: interface {
    resource y {
        constructor();
    }
};
